test/spec_vectors/type-subtyping/fail/module_57.wat
(module (type $t (sub final (func))) (type $s (sub $t (func))))